--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-minimal-pie-chart": "^8.4.0",
+    "react-slick": "^0.29.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
